--- a/SFML/SFML.vcxproj
+++ b/SFML/SFML.vcxproj
@@ -161,6 +161,7 @@
     <ClCompile Include="source\systems\MovementSystem.cpp" />
     <ClCompile Include="source\systems\PrintDebugSystem.cpp" />
     <ClCompile Include="source\systems\TTLSystem.cpp" />
+    <ClCompile Include="source\entities\Mushroom.cpp" />
     <ClCompile Include="source\utils\Rectangle.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -197,6 +198,7 @@
     <ClInclude Include="include\utils\PackedArray.h" />
     <ClInclude Include="include\utils\Rectangle.h" />
     <ClInclude Include="include\utils\Vector2.h" />
+    <ClInclude Include="include\entities\Mushroom.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
